--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+    <img src="https://cdn.discordapp.com/attachments/753897274521681953/861839922168201227/unknown.png">
   </body>
 </html>
